Website generation with Couscous

--- a/readme.html
+++ b/readme.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>SmarTIE Doc</title>
+        <title>DITGBox Doc</title>
 
-        <link rel="stylesheet" href="https://nm2.github.io/smartie-doc/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://nm2.github.io/smartie-doc/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://nm2.github.io/smartie-doc/css/highlight.dark.css">
-        <link rel="stylesheet" href="https://nm2.github.io/smartie-doc/css/main.css">
+        <link rel="stylesheet" href="https://nm2.github.io/ditgbox-doc/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://nm2.github.io/ditgbox-doc/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://nm2.github.io/ditgbox-doc/css/highlight.dark.css">
+        <link rel="stylesheet" href="https://nm2.github.io/ditgbox-doc/css/main.css">
     </head>
     <body>
 
@@ -19,10 +19,10 @@
                 <a class="nounderline" href="http://www.nm-2.com" target="_blank">
                     <img src="images/common/nm2.png">
                 </a>
-                <a class="nounderline" href="https://nm2.github.io/smartie-doc/">
-                    SmarTIE Doc
+                <a class="nounderline" href="https://nm2.github.io/ditgbox-doc/">
+                    DITGBox Doc
                     <small class="hidden-xs hidden-sm">
-                        SmarTIE v3.0 Documentation
+                        DITGBox Documentation
                     </small>
                 </a>
             </div>
@@ -37,130 +37,38 @@
                     <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
 
                                                     <p class="text-muted">
-                                Main
+                                DITGBox
                             </p>
 
                             <ul class="nav nav-pills nav-stacked">
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#introduction">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#introduction">
                                             Introduction
                                         </a>
                                     </li>
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#login">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#login">
                                             Login
                                         </a>
                                     </li>
-                                                            </ul>
-                                                    <p class="text-muted">
-                                Passive
-                            </p>
-
-                            <ul class="nav nav-pills nav-stacked">
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#home">
-                                            Home
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#generation">
+                                            Generation
                                         </a>
                                     </li>
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#common-features">
-                                            Common features
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#file-manager">
+                                            File Manager
                                         </a>
                                     </li>
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#dashboard">
-                                            Dashboard
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#time-based">
-                                            Time based
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#top-n">
-                                            Top N
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#anomalies">
-                                            Anomalies
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#report">
-                                            Report
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#settings">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#settings">
                                             Settings
                                         </a>
                                     </li>
-                                                            </ul>
-                                                    <p class="text-muted">
-                                Active
-                            </p>
-
-                            <ul class="nav nav-pills nav-stacked">
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#home-1">
-                                            Home
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#agents">
-                                            Agents
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#customers">
-                                            Customers
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#plans">
-                                            Plans
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#access-networks">
-                                            Access networks
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#results">
-                                            Results
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#metrics">
-                                            Metrics
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#measure-servers">
-                                            Measure servers
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#experiments">
-                                            Experiments
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#campaigns">
-                                            Campaigns
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#schedules">
-                                            Schedules
-                                        </a>
-                                    </li>
-                                                                    <li class="">
-                                        <a href="https://nm2.github.io/smartie-doc/index.html#locks">
-                                            Locks
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#about">
+                                            About
                                         </a>
                                     </li>
                                                             </ul>
@@ -169,8 +77,8 @@
 
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
-                    <h2 id="smartie-doc-repo">SmarTIE Doc REPO</h2>
-<p>In this repository it is stored the SmarTIE documentation. The GitHub page is built from the content of the <em>index.md</em> file and using the <strong>Couscous</strong> framework, instead of Jekyll (provided by GitHub).</p>
+                    <h2 id="ditgbox-doc-repo">DITGBox Doc REPO</h2>
+<p>In this repository it is stored the DITGBox documentation. The GitHub page is built from the content of the <em>index.md</em> file and using the <strong>Couscous</strong> framework, instead of Jekyll (provided by GitHub).</p>
 <p>Couscous helps to quickly define the template to use for the doc and dynamically creates a side menù.</p>
 <p>In the repository, there are two different branches:</p>
 <ul>
@@ -205,7 +113,7 @@
 </blockquote>
 <pre><code class="language-markdown">Deploying the website
 
-Cloning https://github.com/NM2/smartie-doc.git in /private/var/folders/6m/pwk1kdhn6077_16q6lz_kztm0000gn/T/couscous_deploy_IF54hC
+Cloning https://github.com/NM2/ditgbox-doc.git in /private/var/folders/6m/pwk1kdhn6077_16q6lz_kztm0000gn/T/couscous_deploy_IF54hC
 
 Checking out branch gh-pages
 Copying generated website
@@ -216,14 +124,6 @@ Pushing gh-pages (GitHub may ask you to login)</code></pre>
 
             </div>
         </main>
-
-        <footer>
-            <div class="container-fluid">
-                <p class="text-muted">
-                    website generated with <a href="http://couscous.io" title="Markdown website generator">Couscous</a>
-                </p>
-            </div>
-        </footer>
 
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
