--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
 
             <div class="navbar-brand">
                 <a class="nounderline" href="http://www.nm-2.com" target="_blank">
-                    <img src="images/common/nm2.png">
+                    <img src="images/nm2.png">
                 </a>
                 <a class="nounderline" href="https://nm2.github.io/ditgbox-doc/">
                     DITGBox Doc
