--- a/readme.html
+++ b/readme.html
@@ -22,7 +22,7 @@
                 <a class="nounderline" href="https://nm2.github.io/ditgbox-doc/">
                     DITGBox Doc
                     <small class="hidden-xs hidden-sm">
-                        DITGBox Documentation
+                        DITGBox v1.3.9 Documentation
                     </small>
                 </a>
             </div>
