Website generation with Couscous

--- a/readme.html
+++ b/readme.html
@@ -37,7 +37,7 @@
                     <nav id="sidebar" class="col-sm-3 col-lg-2" role="navigation">
 
                                                     <p class="text-muted">
-                                DITGBox
+                                DITGBox WebUI
                             </p>
 
                             <ul class="nav nav-pills nav-stacked">
@@ -47,8 +47,8 @@
                                         </a>
                                     </li>
                                                                     <li class="">
-                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#login">
-                                            Login
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#authentication">
+                                            Authentication
                                         </a>
                                     </li>
                                                                     <li class="">
@@ -69,6 +69,167 @@
                                                                     <li class="">
                                         <a href="https://nm2.github.io/ditgbox-doc/index.html#about">
                                             About
+                                        </a>
+                                    </li>
+                                                            </ul>
+                                                    <p class="text-muted">
+                                API
+                            </p>
+
+                            <ul class="nav nav-pills nav-stacked">
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#abort">
+                                            Abort
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#configure">
+                                            Configure
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#login">
+                                            Login
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#dataports">
+                                            Dataports
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#upload-distribution-file">
+                                            Upload Distribution File
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#upload-payload-content-file">
+                                            Upload Payload Content File
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#upload-pcap-trace">
+                                            Upload PCAP Trace
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#delete-presets">
+                                            Delete Presets
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-presets">
+                                            Get Presets
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#delete-single-preset">
+                                            Delete Single Preset
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#edit-preset">
+                                            Edit Preset
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#upload-preset">
+                                            Upload Preset
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#add-remote-box">
+                                            Add Remote Box
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-remote-boxes">
+                                            Get Remote Boxes
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#delete-remote-box">
+                                            Delete Remote Box
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-single-remote-box">
+                                            Get Single Remote Box
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#force-remote-box-update">
+                                            Force Remote Box Update
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-results">
+                                            Get Results
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-experiment-results">
+                                            Get Experiment Results
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-html-report">
+                                            Get HTML Report
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#start-experiment">
+                                            Start Experiment
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#get-box-status">
+                                            Get Box Status
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#stop-experiment">
+                                            Stop Experiment
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#synchronize-box">
+                                            Synchronize Box
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-2544">
+                                            RFC 2544
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-2679">
+                                            RFC 2679
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-2680">
+                                            RFC 2680
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-2681">
+                                            RFC 2681
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-3148">
+                                            RFC 3148
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-3393">
+                                            RFC 3393
+                                        </a>
+                                    </li>
+                                                                    <li class="">
+                                        <a href="https://nm2.github.io/ditgbox-doc/index.html#rfc-3432">
+                                            RFC 3432
                                         </a>
                                     </li>
                                                             </ul>
