Website generation with Couscous

--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@ the list of the RFCs the current version of the product is compliant with
 license information for third party components used in DITGBox.</p>
 <h2 id="api">API</h2>
 <p>DITGBox provides an easy-to-use RESTful API that can be used to interact with the platform</p>
+<h3 id="low-level-api-methods">Low-level API methods</h3>
+<p>The following methods are primitives that can be invoked to perform low-level operations</p>
 <h3 id="abort">Abort</h3>
 <p>Used to stop a running experiment (the results collected up to that point are lost)</p>
 <h4 id="request">Request</h4>
@@ -1140,6 +1142,8 @@ This method will return the identifier of the experiment to the user. This ident
 <p><strong>status</strong> : Status of the call. It can be &quot;ok&quot; or &quot;err&quot;</p>
 <p><strong>msg</strong> : Status message containing information on the outcome of the call</p>
 </blockquote>
+<h3 id="high-level-api-methods">High-level API methods</h3>
+<p>The following methods can be invoked to configure and execute experiments compliant with the supported RFCs</p>
 <h3 id="rfc-2544">RFC 2544</h3>
 <p>Used to execute an experiment compliant with RFC 2544</p>
 <h4 id="request-25">Request</h4>
